--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,56 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- Framelayout to display Fragments -->
+    <FrameLayout
+        android:id="@+id/frame_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <!-- The first child in the layout is for the main Activity UI-->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:id="@+id/Hello"/>
-
-    <TextView
-       android:layout_width="fill_parent"
-       android:layout_height="wrap_content"
-       android:text="Http GET Demo"
-        android:layout_below="@id/Hello"
-        android:id="@+id/GetDemo"/>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="GET"
-        android:layout_below="@id/GetDemo"
-        android:id="@+id/my_button"/>
-
-
-    <EditText
-        android:layout_margin="20dip"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:minLines="15"
-        android:maxLines="15"
-        android:textSize="12sp"
-        android:editable="false"
-        android:layout_below="@id/my_button"
-        android:id="@+id/my_edit"/>
-
-
-</RelativeLayout>
 
     <!-- Side navigation drawer UI -->
     <ListView
-        android:id="@+id/navList"
-        android:layout_width="200dp"
+        android:id="@+id/list_slidermenu"
+        android:layout_width="240dp"
         android:layout_height="match_parent"
-        android:layout_gravity="left|start"
-        android:background="#ffeeeeee"/>
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="@color/list_divider"
+        android:dividerHeight="1dp"
+        android:listSelector="@drawable/list_selector"
+        android:background="@color/list_background"/>
 
 </android.support.v4.widget.DrawerLayout>
 
